--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,3 +1,6 @@
+CONFIG_ZMK_IDLE_TIMEOUT= 5000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT= 3600000
+
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
